fix broken ui Card overflow

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -141,7 +141,7 @@ a {
 }
 .projectMain {
   padding: 20px;
-  width: 100%;
+  /* width: 100%; */
 }
 
 /* PET PROJECTS */
